// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`accountSettings.update > functionality > autoAcceptDebts > settings found 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
- INSERT INTO public.\\"accountSettings\\" VALUES ('7e8fbfa4-7c2b-41da-9721-bdc6f99c80bb', true);
+ INSERT INTO public.\\"accountSettings\\" VALUES ('7e8fbfa4-7c2b-41da-9721-bdc6f99c80bb', false);"
`;

exports[`accountSettings.update > functionality > autoAcceptDebts > settings not found - updated with default-like 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
+ INSERT INTO public.\\"accountSettings\\" VALUES ('adaa8036-6cad-46a2-930d-17a4dac71b7d', false);"
`;

exports[`accountSettings.update > functionality > autoAcceptDebts > settings not found - updated with non-default value 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
+ INSERT INTO public.\\"accountSettings\\" VALUES ('ffaa53de-faa9-417e-af6a-b1698122f0aa', true);"
`;
